# seo-agent

./: .gitignore  README.md  audit.py  pyproject.toml
.claude/commands/: seo-audit.md
.claude/workflows/: seo-audit.js
models/: types.py
modules/: aeo.py  crawl.py  discovery.py  eeat.py  merge_rewrites.py  metadata.py  pagespeed.py  schema.py  technical.py
