[project]
name = "seo-agent"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "playwright>=1.50",
    "beautifulsoup4>=4.13",
    "extruct>=0.17",
    "jsonschema>=4.23",
    "phonenumbers>=8.13",
    "tldextract>=5.1",
    "trafilatura>=2.0",
    "typer>=0.15",
    "lxml>=5.3",
]

[project.scripts]
seo-audit = "audit:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules", "models"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
